--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /TerminalAPI/.vs/TerminalAPI/FileContentIndex/74f9f33e-bf8d-464b-a218-d2b8fb588aa9.vsidx
 /TerminalAPI/.vs/TerminalAPI/FileContentIndex/9b73f56b-4d46-4f00-893e-d47a8e301263.vsidx
 /TerminalAPI/.vs/TerminalAPI/FileContentIndex/9b73f56b-4d46-4f00-893e-d47a8e301263.vsidx
+/TerminalAPI/.vs/TerminalAPI/v17/.suo
+/TerminalAPI/.vs/TerminalAPI/v17/.suo
+/TerminalAPI/.vs/TerminalAPI/v17/.suo
+/.gitignore
+/TerminalAPI/.vs/TerminalAPI/v17/.suo
