--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 /TerminalAPI/.vs/TerminalAPI/v17/.suo
 /.gitignore
 /TerminalAPI/.vs/TerminalAPI/v17/.suo
+/Terminal.DBOperations/bin/Debug/net6.0
+/Terminal.DBOperations/obj/Debug/net6.0/ref
+/Terminal.DBOperations/obj/Debug/net6.0/refint
+/Terminal.DBOperations/obj/Debug/net6.0
+/Terminal.DBOperations/obj
+/TerminalAPI/bin/Debug/net6.0/runtimes/win-arm/native
+/TerminalAPI/bin/Debug/net6.0/runtimes/win-arm64/native
+/TerminalAPI/bin/Debug/net6.0/runtimes
