--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,20 @@
 /TerminalAPI/bin/Debug/net6.0/runtimes/win-arm/native
 /TerminalAPI/bin/Debug/net6.0/runtimes/win-arm64/native
 /TerminalAPI/bin/Debug/net6.0/runtimes
+/Terminal.DTOs/bin/Debug/net6.0/Terminal.DTOs.pdb
+/Terminal.DTOs/obj/Debug/net6.0/ref/Terminal.DTOs.dll
+/Terminal.DTOs/bin/Debug/net6.0/Terminal.DTOs.dll
+/Terminal.DTOs/obj/Debug/net6.0/refint/Terminal.DTOs.dll
+/Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.dll
+/Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.pdb
+/TerminalAPI/.vs/TerminalAPI/FileContentIndex/5c5e473d-fa74-4e25-9d02-d65fe3a20edf.vsidx
+/TerminalAPI/.vs/TerminalAPI/FileContentIndex/5f231ed9-9f60-4dcd-9dae-58d857bafc29.vsidx
+/TerminalAPI/.vs/TerminalAPI/FileContentIndex/e5a4141c-c06e-43c7-b8fb-41a8cf57a358.vsidx
+/TerminalAPI/.vs/TerminalAPI/FileContentIndex/737b48d5-df5d-4aea-9b5c-16b27d8a819e.vsidx
+/TerminalAPI/obj/Debug/net6.0/TerminalAPI.csproj.AssemblyReference.cache
+/Terminal.DTOs/bin/Debug/net6.0/Terminal.DTOs.dll
+/Terminal.DTOs/bin/Debug/net6.0/Terminal.DTOs.pdb
+/Terminal.DTOs/obj/Debug/net6.0/ref/Terminal.DTOs.dll
+/Terminal.DTOs/obj/Debug/net6.0/refint/Terminal.DTOs.dll
+/Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.pdb
+/Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.dll
