--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,19 @@
 /Terminal.DTOs/obj/Debug/net6.0/refint/Terminal.DTOs.dll
 /Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.pdb
 /Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.dll
+*.vsidx
+*.dll
+/Terminal.DTOs/obj/Debug/net6.0/Terminal.DTOs.csproj.CoreCompileInputs.cache
+*.pdb
+/Terminal.JWT/bin/Debug/net6.0/Terminal.JWT.pdb
+/Terminal.JWT/bin/Debug/net6.0/Terminal.JWT.dll
+/Terminal.JWT/bin/Debug/net6.0/Terminal.JWT.deps.json
+/Terminal.JWT/obj/Debug/net6.0/ref/Terminal.JWT.dll
+/Terminal.DTOs/UserLoginDTO.cs
+/Terminal.JWT/obj/Debug/net6.0
+/TerminalAPI/obj/TerminalAPI.csproj.nuget.dgspec.json
+/TerminalAPI/obj/project.nuget.cache
+/TerminalAPI/obj/project.assets.json
+/TerminalAPI/obj/Debug/net6.0/TerminalAPI.csproj.FileListAbsolute.txt
+/TerminalAPI/obj/Debug/net6.0/ref/TerminalAPI.dll
+*.json
