Login Verify Registration Completed

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@
 /TerminalAPI/obj/Debug/net6.0/TerminalAPI.csproj.FileListAbsolute.txt
 /TerminalAPI/obj/Debug/net6.0/ref/TerminalAPI.dll
 *.json
+/TerminalAPI/.vs/TerminalAPI/v17/.futdcache.v2
+/TerminalAPI/.vs/TerminalAPI/DesignTimeBuild/.dtbcache.v2
+/TerminalAPI/.vs/ProjectEvaluation/terminalapi.metadata.v5.2
+/TerminalAPI/.vs/ProjectEvaluation/terminalapi.projects.v5.2
+/TerminalAPI/.vs/TerminalAPI/FileContentIndex/a5c64ce6-8471-4d9c-b8af-39a092330360.vsidx
+/TerminalAPI/.vs/TerminalAPI/DesignTimeBuild/.dtbcache.v2
