UserLogin ResetPassword Forgot Password Implementation Completed

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,14 @@
 /TerminalAPI/.vs/ProjectEvaluation/terminalapi.projects.v5.2
 /TerminalAPI/.vs/TerminalAPI/FileContentIndex/a5c64ce6-8471-4d9c-b8af-39a092330360.vsidx
 /TerminalAPI/.vs/TerminalAPI/DesignTimeBuild/.dtbcache.v2
+/Terminal.Models/obj/Debug/net6.0/Terminal.Models.pdb
+/Terminal.Models/obj/Debug/net6.0/Terminal.Models.dll
+/Terminal.Models/obj/Debug/net6.0/Terminal.Models.csproj.CoreCompileInputs.cache
+/Terminal.Models/obj/Debug/net6.0/refint/Terminal.Models.dll
+/TerminalAPI/bin/Debug/net6.0/Terminal.Models.pdb
+/TerminalAPI/bin/Debug/net6.0/Terminal.Models.dll
+/Terminal.Models/obj/Debug/net6.0/ref/Terminal.Models.dll
+/Terminal.Models/bin/Debug/net6.0/Terminal.Models.pdb
+/Terminal.Models/bin/Debug/net6.0/Terminal.Models.dll
+/Terminal.JWT/bin/Debug/net6.0/Terminal.Models.pdb
+/Terminal.JWT/bin/Debug/net6.0/Terminal.Models.dll
